--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "@woard/web",
 	"scripts": {
-		"dev": "vite"
+		"dev": "vite",
+		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
+		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -13,10 +16,23 @@
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"nanostores": "^0.7.0",
+		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.1",
 		"typescript": "^4.8.4",
-		"vite": "^3.1.4"
+		"unplugin-auto-import": "^0.11.2",
+		"vite": "^3.1.4",
+		"vite-plugin-babel": "^1.1.2"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.39.0",
+		"@typescript-eslint/parser": "^5.39.0",
+		"eslint": "^8.24.0",
+		"eslint-plugin-react": "^7.31.8"
 	}
 }
