--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"dev": "vite",
 		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
+		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx,json} --fix ",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"license": "MIT",
@@ -15,6 +15,7 @@
 		"@mui/material": "^5.10.8",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
+		"@types/styled-components": "^5.1.26",
 		"@vitejs/plugin-react": "^2.1.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -23,11 +24,12 @@
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.4.1",
+		"styled-components": "^5.3.6",
 		"typescript": "^4.8.4",
 		"unplugin-auto-import": "^0.11.2",
 		"vite": "^3.1.4",
-		"vite-plugin-babel": "^1.1.2"
+		"vite-plugin-babel": "^1.1.2",
+		"wouter": "2.8.0-alpha.2"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
