--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
 		"dev": "vite",
 		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
 		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx,json} --fix ",
+		"build": "vite build",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"license": "MIT",
